# notebooks-for-all

./: .gitignore  .yarnrc.yml  404.html  DEVELOPER.md  LICENSE  README.md  convert.py  convert.sh  dodo.py  hooks.py  index.html  jupyter_nbconvert_config.py  mkdocs.yml  objects.inv  out.html  package.json  pyproject.toml  sanitize.cfg  setup.cfg  sitemap.xml  test-environment.yml  test_a11y.py  test_axe.py  test_nbconvert_html5.py  test_smoke.py
.devcontainer/: Dockerfile
.github/: issue_template.md  test-environment.yml
.github/workflows/: convert.yml  docs.yml  draft-release.yml  pr-open.yml  prerelease.yml  release.yml  test.yml
configurations/: contenteditable-code.py  default.py  feed.py  ol.py  tab-to-code-nav-high-contrast.py  table-default.py  tabs-scroll-to-top.py
docs/: jupyter_nbconvert_config.py
exports/audit/: lorenz-executed-a11y.json  lorenz-executed-default.json
exports/configs/: index.html
exports/html/: lorenz-a11y.html  lorenz-default.html  lorenz-executed-a11y.html  lorenz-executed-default.html  settings.js
exports/notebooks/: index.html
exports/pytest/: report.html
exports/resources/event-hackathon/accessibility-tips-for-jupyter-notebooks/: index.html
exports/resources/event-hackathon/notebook-authoring-checklist/: index.html
exports/resources/proposal-astronomy-notebooks-for-all/: index.html
exports/user-tests/: index.html
exports/user-tests/0-support/generic-recording-consent/: index.html
exports/user-tests/0-support/outreach-email-template/: index.html
exports/user-tests/0-support/possible-test-notebooks/: index.html
exports/user-tests/0-support/user-testing-resources/: index.html
exports/user-tests/1-navigation/: jupyter_nbconvert_config.py
exports/user-tests/1-navigation/results/: index.html
exports/user-tests/1-navigation/test-script/: index.html
exports/user-tests/2-content/Test-script/: index.html
exports/user-tests/2-content/results/: index.html
exports/user-tests/2-content/results/cell-contents/: index.html
exports/user-tests/2-content/results/conclusion/: index.html
exports/user-tests/2-content/results/navigation/: index.html
exports/user-tests/2-content/results/rich-outputs/: index.html
exports/user-tests/3-cell_structure/planning/: index.html
exports/validator/: lorenz-executed-a11y.json  lorenz-executed-default.json
media/: index.html
nbconvert_a11y/: __init__.py  __main__.py  a11y_exporter.py  audit.py  exporter.py  pytest_axe.py  pytest_github_step_summary.py  pytest_w3c.py
nbconvert_a11y/templates/a11y/: README.md  activity-log.html.j2  base.html.j2  help.html.j2  index.html.j2  index.j2.html  list.html.j2  section.html.j2  settings.html.j2  table.html.j2
nbconvert_a11y/templates/a11y/components/: audit.html.j2  cell.html.j2  core.html.j2  expanded.html.j2  inputs.html.j2  nb-toolbar.html.j2  sa11y.html.j2  settings.html.j2  toc.html.j2  visibility.html.j2
nbconvert_a11y/templates/a11y/static/: settings.js  settings.jsonschema  style.css
nbconvert_a11y/templates/a11y/static/theme/: __main__.py  a11y-dark.css  a11y-high-contrast-dark.css  a11y-high-contrast-light.css  a11y-light.css  blinds-dark.css  blinds-light.css  github-dark.css  (+7 more)
nbconvert_a11y/templates/semantic-forms/: base.html.j2  conf.json  displays.j2.html  feed.html.j2  forms.html.j2  main.html.j2  schema-dl.html.j2  sections.html.j2  style.css
nbconvert_a11y/templates/semantic-forms/static/: script.js
nbconvert_html5/: __init__.py  __main__.py  audit.py  exporters.py  form_exporter.py  index.html  modifiers.py  pytest_axe.py  selectors.py
nbconvert_html5/templates/: backup.html  html.j2  html5-lab.j2  index.html5.j2  test_template.j2
nbconvert_html5/templates/a11y/: activity-log.html.j2  audit.j2.html  dark-code.css  expanded.html.j2  help.html.j2  light-code.css  settings.html.j2  settings.js  style.css  table.html.j2  visibility.html.j2
nbconvert_html5/templates/semantic-forms/: README.md  activity-log.html.j2  activity-log.j2.html  base.html.j2  cell.html.j2  components.html.j2  displays.j2.html  expanded.html.j2  feed.html.j2  index.html.j2  main.html.j2  ol.html.j2  schema-dl.html.j2  sections.html.j2  settings.html.j2  settings.js  smol.html.j2  style.css  table.html.j2  ul.html.j2  visibility.html.j2
nbconvert_html5/templates/semantic-forms/static/: script.js  style.css
nbcovert_html5/: __main__.py  exporters.py
notebooks/: lorenz-executed.ipynb  lorenz.py
notes/: 2022-06-21.md  2022-07-19.md  2022-08-16.md  2022-09-13.md  2022-10-11.md  2022-11-08.md  2023-01-03.md  2023-01-31.md  2023-03-28.md  2023-04-25.md  2023-05-23.md  README.md
readme/: index.html
resources/: proposal-astronomy-notebooks-for-all.md
resources/event-hackathon/: accessibility-tips-for-jupyter-notebooks.md  notebook-authoring-checklist.md
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  convert.py  jupyter_nbconvert_config.py  media.md  nbconvert_html5.md  readme.md  test_a11y.py  test_a11y_baseline.py  test_a11y_settings.py  test_axe.py  test_color_themes.py  test_nbconvert_html5.html  test_nbconvert_html5.ipynb  test_nbconvert_html5.py  test_playwright.py  test_smoke.py  test_third.py  test_w3c.py  virtual-screen-reader.test.js
tests/.ipynb_checkpoints/: test_nbconvert_html5-checkpoint.ipynb
tests/configurations/: a11y.py  contenteditable-code.py  default.py  list.py  main.py  section.py  sections.py  smol.py  tab-to-code-nav-high-contrast.py  tab-to-content-nav-high-contrast.py  table-default.py  tabs-scroll-to-top.py  ul.py
tests/notebooks/: lorenz-executed.ipynb  lorenz.ipynb
tests/templates/: configs.md.j2  experiments.md.j2  notebooks.md.j2  report.py
user-tests/: LICENSE  README.md
user-tests/0-support/: generic-recording-consent.md  outreach-email-template.md  possible-test-notebooks.md  user-testing-resources.md
user-tests/1-navigation/: results.md  test-script.md
user-tests/2-content/: Test-script.md  results.md
user-tests/2-content/results/: README.md  cell-contents.md  conclusion.md  navigation.md  rich-outputs.md
user-tests/3-cell_structure/: planning.md
