[metadata]
name = nbconvert_html5
description = Accessible templates for Jupyter noteb ooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Iota-School/notebooks-for-all
author = 
author_email = 
keywords = 

[options]
install_requires = 
	nbconvert
packages = 
	nbconvert_html5

[options.extras_require]
doc = 
	jupyter-book
test = 
	pytest
	nbval

[options.entry_points]
nbconvert.exporters =
	html5 = nbconvert_html5:Html5